@@ -282,6 +282,7 @@ spec/spec/runner/empty_file.txt
 spec/spec/runner/examples.txt
 spec/spec/runner/failed.txt
 spec/spec/runner/formatter/base_formatter_spec.rb
+spec/spec/runner/formatter/base_text_formatter_spec.rb
 spec/spec/runner/formatter/failing_example_groups_formatter_spec.rb
 spec/spec/runner/formatter/failing_examples_formatter_spec.rb
 spec/spec/runner/formatter/html_formatted-1.8.4.html
